manifests/camh/traefik-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: traefik
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: internal-https
spec:
  tls:
    - hosts:
      - traefik.xdna.net
      secretName: traefik-xdna-https-cert
  rules:
    - host: traefik.xdna.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-dashboard
                port:
                  name: http
